--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,27 +1,46 @@
 <nav class="nav">
-    <h1><a routerLink="/">E-COMM</a></h1>
-    <div *ngIf="menuType==='default'" class="nav-search">
-        <input type="text" #searchInput (keyup)="searchProduct($event)" (blur)="hideSearch()" placeholder="Search for Products">
-        <button (click)="submitSearch(searchInput.value)" >Search</button>
-        <ul class="suggested-result" *ngIf="searchResult" >
-            <li *ngFor="let item of searchResult">
-                <a>{{item.name}}</a>
-            </li>
-        </ul>
-    </div>
-    <div [ngSwitch]="menuType">
+  <h1><a routerLink="/">E-COMM</a></h1>
+  <div *ngIf="menuType === 'default'" class="nav-search">
+    <input
+      type="text"
+      #searchInput
+      (keyup)="searchProduct($event)"
+      (blur)="hideSearch()"
+      placeholder="Search for Products"
+    />
+    <button (click)="submitSearch(searchInput.value)">Search</button>
+    <ul class="suggested-result" *ngIf="searchResult">
+      <li *ngFor="let item of searchResult">
+        <a (mousedown)="redirectToDetails(item.id)">{{ item.name }}</a>
+      </li>
+    </ul>
+  </div>
+  <div [ngSwitch]="menuType">
     <ul *ngSwitchCase="'default'">
-        <li><a routerLink="">Home</a></li>
-        <li><a routerLink="seller-auth">Seller</a></li>
-        <li><a href="#">Login</a></li>
-        <li><a href="#">Cart(0)</a></li>
+      <li><a routerLink="">Home</a></li>
+      <li><a routerLink="seller-auth">Seller</a></li>
+      <li><a routerLink="/user-auth">Login/sign-up</a></li>
+      <li><a href="#">Cart(0)</a></li>
+    </ul>
+
+    <ul *ngSwitchCase="'user'">
+      <li><a routerLink="">Home</a></li>
+      <li><a routerLink="seller-auth">Seller</a></li>
+      <li>
+        <a routerLink="/user-auth">{{ userName | titlecase }}</a>
+      </li>
+
+      <li><a (click)="userLogout()">Logout</a></li>
+      <li><a href="#">Cart(0)</a></li>
     </ul>
 
     <ul *ngSwitchCase="'seller'">
-        <li><a routerLink="seller-add-product">Add Product</a></li>
-        <li><a routerLink="seller-home">List</a></li>
-        <li><a (click)="logout()">Logout</a></li>
-        <li><a href="#">{{sellerName | titlecase}}</a></li>
+      <li><a routerLink="seller-add-product">Add Product</a></li>
+      <li><a routerLink="seller-home">List</a></li>
+      <li><a (click)="logout()">Logout</a></li>
+      <li>
+        <a href="#">{{ sellerName | titlecase }}</a>
+      </li>
     </ul>
-    </div>
+  </div>
 </nav>
