--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,13 @@
 <ngb-carousel *ngIf="popularProducts">
   <ng-template *ngFor="let item of popularProducts" ngbSlide>
     <div class="picsum-img-wrapper">
-      <img
-        src="{{ item.image }}"
-        alt="Random first slide"
-        class="product-header-img"
-      />
+      <a routerLink="/details/{{ item.id }}">
+        <img
+          src="{{ item.image }}"
+          alt="Random first slide"
+          class="product-header-img"
+        />
+      </a>
     </div>
     <div class="carousel-caption">
       <h3>{{ item.name }}</h3>
@@ -18,25 +20,21 @@
   <div class="row">
     <div class="col-sm-3" *ngFor="let item of trendyProducts">
       <div class="product-item">
-        <img
-          src="{{item.image}}"
-          alt=""
-        />
+        <img src="{{ item.image }}" alt="" />
         <div class="product-details">
-          <h6 class="name-head">{{item.name}}</h6>
+          <h6 class="name-head">{{ item.name }}</h6>
           <div class="product-price">
-            <h6>Price: {{item.price}}</h6>
+            <h6>Price: {{ item.price }}</h6>
           </div>
           <div class="product-color">
-            <h6>Color: {{item.color}}</h6>
+            <h6>Color: {{ item.color }}</h6>
           </div>
         </div>
         <div class="product-footer">
-          <a href="">View Details</a>
+          <a routerLink="/details/{{ item.id }}">View Details</a>
           <a href="">Add to Cart</a>
         </div>
       </div>
     </div>
-
-
+  </div>
 </div>
